# kuleshov

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
docs/: film-ir-context-architecture.md  grain-delivery-plan.md  m1-plan.md  postmortem-hf-breach.md  render-http-api.md  review-2026-07-15-response.md  upgrade-plan-2026-07-21.md
film-ir/: DESIGN.md  pyproject.toml
film-ir/src/film_ir/: __init__.py  api.py  cli.py  contract.py  errors.py  gates.py  migrate.py  models.py  patch.py  selectors.py  store.py
film-ir/src/film_ir/execute/: __init__.py  base.py  hyperframes.py  providers.py  stubs.py  tts.py
film-ir/tests/: conftest.py  test_cli.py  test_execute.py  test_gates.py  test_migrate.py  test_patch.py  test_selectors.py  test_style_contract.py
film-ir/tests/fixtures/: 800v-thermal-runaway.json  _template.json  samsung-health-ai-consent.json
projects/800v-thermal-runaway/: brief.md  research.md  review.md  script.md
projects/_template/: film.json
projects/dont-set-ac-26/: brief.md  film.json  research.md  review.md  script.md
projects/estee-lauder-night/: brief.md  research.md  review.md  script.md  storyboard.md
projects/hf-ai-agent-breach/: brief.md  film.json  research.md  review.md  script.md
projects/openai-78m-logs/: brief.md  film.json  research.md  review.md  script.md
projects/samsung-health-ai-consent/: .gitignore  (+4 more)
styles/: _iteration.md  translation-table.md
tools/: kuleshov-lint.py  measure-render.py  minimax-voice-ecapa.py  oss-upload.sh  preflight.sh  render-remote.sh  requirements.txt
(+464 files in other folders)
